Modified the report bugs section

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 <ul class="list-unstyled">
 <li>Dowload from CRAN at <br><a href="https://cloud.r-project.org/web/packages/Rpvt/index.html">https://​cloud.r-project.org/​web/​packages/​Rpvt/​index.html</a>
 </li>
-<li>Report a bug at <br><a href="https://github.com/susaenergy/Rpvt/issues">https://​github.com/​susaenergy/​Rpvt/​issues</a>
+<li>Report a bug at <br><a href="https://github.com/susaenergy/Rpvt_ws/issues">https://​github.com/​susaenergy/​Rpvt_ws/​issues</a>
 </li>
 </ul>
 </div>
